# fotos

./: .gitignore  .goreleaser.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  justfile  lefthook.yml  llms.txt  manifest  spec.md  testaruda.toml
.beads/: config.yaml  issues.jsonl  metadata.json
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl
.beads/export-state/: 9e75aa02435bccd8.json
.beads/hooks/: pre-commit  pre-push  prepare-commit-msg
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.espectacular/ai-processing/: analyze-screenshot-with-a-user-defined-endpoint.toml  analyze-screenshot-with-claude.toml  analyze-screenshot-with-gemini.toml  analyze-screenshot-with-ollama-via-user-defined-endpoint.toml  authentication-failure.toml  auto-blur-detected-pii.toml  deduplicate-overlapping-words.toml  default-prompt-when-none-provided.toml  default-timeout-value.toml  detect-api-keys.toml  detect-aws-arns.toml  detect-email-addresses-in-screenshot.toml  detect-ip-addresses.toml  detect-multiple-pii-types.toml  extract-text-from-complex-multi-column-layout.toml  extract-text-from-high-resolution-screenshot.toml  frontend-applies-blur-annotations.toml  handle-very-large-images.toml  image-exceeds-provider-dimension-limit.toml  image-within-provider-limits.toml  network-error.toml  no-pii-to-blur.toml  ollama-uses-passthrough.toml  provider-configuration-applied.toml  provider-returns-server-error.toml  rate-limit-exceeded.toml  request-times-out.toml  settings-change-takes-effect-immediately.toml  use-accessibility-prompt.toml  (+5 more)
.wai/: PLUGINS.md  config.toml
docs/: MCP.md
flatpak/: cargo-sources.json  io.github.charly-vibes.fotos.desktop  io.github.charly-vibes.fotos.metainfo.xml  io.github.charly-vibes.fotos.yml  io.github.charly.fotos.desktop  io.github.charly.fotos.metainfo.xml  io.github.charly.fotos.yml  io.github.charly_vibes.fotos.desktop  io.github.charly_vibes.fotos.metainfo.xml  io.github.charly_vibes.fotos.yml
gnome-extension/: extension.js  metadata.json
openspec/: project.md
plans/: 2026-02-25-documentation-update.md
scripts/: build-flatpak.sh  dev.sh  update-homebrew-cask.py  update-homebrew-mcp.py  update-scoop-desktop.py  update-scoop-mcp.py
src-mcp/: Cargo.toml  mcp-manifest.json
src-mcp/src/: bridge.rs  main.rs  prompts.rs  resources.rs  server.rs  tools.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: credentials.rs  dbus.rs  lib.rs  main.rs
src-tauri/src/ai/: compress.rs  llm.rs  mod.rs  ocr.rs  ollama.rs  openai_compat.rs  pii.rs
src-tauri/src/capture/: detect.rs  mod.rs  portal.rs  xcap_backend.rs
src-tauri/src/commands/: ai.rs  capture.rs  files.rs  mod.rs  settings.rs
src-tauri/src/ipc/: client.rs  server.rs
src-ui/: index.html
(+425 files in other folders)
