[package]
name = "fotos"
version = "0.1.0"
edition = "2021"
description = "AI-powered screenshot capture, annotation, and analysis tool"

[lib]
name = "fotos_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"

# Screenshot capture
xcap = "0.8"

# Image processing
image = "0.25"
imageproc = "0.25"
ab_glyph = "0.2"

# AI / OCR
tesseract = "0.14"
regex = "1"

# LLM API clients
reqwest = { version = "0.12", features = ["json", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

# IPC between main app and MCP server
interprocess = "2"

# Credential storage
keyring = "3"

# Utilities
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "6"

[target.'cfg(target_os = "linux")'.dependencies]
ashpd = "0.11"
zbus = "5"
